<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Airdrop</groupId>
  <artifactId>Airdrop</artifactId>
  <version>2.1.1</version>
  <build>
    <resources>
      <resource>
       <directory>src/main/resources</directory>
       <!-- Keep filtering at false for other resources to prevent bad magic -->
       <filtering>false</filtering>
  	 </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>16</release>
        </configuration>
      </plugin>
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
       </plugin>
    <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
            <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
        </configuration>
    </plugin>
    </plugins>
  </build>
  <repositories>
    <!-- This adds the Spigot Maven repository to the build -->
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
      <repository>
          <id>essentials-releases</id>
          <url>https://repo.essentialsx.net/releases/</url>
      </repository>
      <repository>
          <id>paper-repo</id>
          <url>https://papermc.io/repo/repository/maven-public/</url>
      </repository>
</repositories>
  <dependencies>
  	  <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
         <version>1.20.1-R0.1-SNAPSHOT</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.luckperms</groupId>
          <artifactId>api</artifactId>
          <version>5.4</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.essentialsx</groupId>
          <artifactId>EssentialsX</artifactId>
          <version>2.20.0</version>
          <scope>provided</scope>
      </dependency>
   <!-- https://mvnrepository.com/artifact/junit/junit -->
  </dependencies>
  <properties>
    <maven.compiler.release>16</maven.compiler.release>
</properties>
<packaging>jar</packaging>
</project>